# agents-skills-researchgpt

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
agents/: __init__.py  graph.py  orchestrator.py  pdf_agent.py  search_agent.py  state.py  writer_agent.py
skills/financial_writer/: SKILL.md
skills/pdf_extraction/: SKILL.md
skills/web_search/: SKILL.md
utils/: __init__.py  pdf_parser.py  tavily_client.py
